--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,12 @@ archivesBaseName = "biginv"
 version = project.biginv_version
 group = "com.sollyw"
 
+repositories {
+    maven { url "https://maven.terraformersmc.com/"}
+    maven { url "https://ladysnake.jfrog.io/artifactory/mods" }
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.mappings_version}:v2"
@@ -19,6 +25,7 @@ dependencies {
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fapi_version}"
 
+    modImplementation "dev.emi:trinkets:${trinkets_version}"
 }
 
 processResources {
